hphp/test/slow/case_sensitive_functions.php.expectf
Fatal error: Call to undefined function hh\class_meth() in %s/case_sensitive_functions.php on line 13
